版本适配请求修改

--- a/renderer/main.html
+++ b/renderer/main.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>AI标王</title>
+	<title>授权工具</title>
 	<style>
 		* {
 			margin: 0;
@@ -587,7 +587,7 @@
 			const params = new URLSearchParams(window.location.search);
 			const version = params.get('version');
 			if (version) {
-				versionInfo.textContent = `© 2025 AI标王 v${version}`;
+				versionInfo.textContent = `© 2025 授权工具 v${version}`;
 			}
 
 			navItems.forEach((item, index) => {
