--- a/renderer/login.html
+++ b/renderer/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>登录 - AI标王</title>
+  <title>登录 - 授权工具</title>
   <style>
     * {
       margin: 0;
@@ -363,7 +363,7 @@
     <button class="close-btn" id="closeBtn" title="关闭"></button>
 
     <div class="login-header">
-      <h1>AI标王</h1>
+      <h1>授权工具</h1>
       <p>欢迎使用内容管理平台</p>
     </div>
 
@@ -386,7 +386,7 @@
     </div>
 
     <div class="login-footer">
-      © 2025 AI标王 - 专业的内容管理解决方案
+      © 2025 授权工具 - 专业的内容管理解决方案
       <span id="version" style="margin-left: 10px;"></span>
     </div>
   </div>
