--- a/renderer/welcome.html
+++ b/renderer/welcome.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>欢迎使用AI标王</title>
+  <title>欢迎使用授权工具</title>
   <style>
     html, body {
       height: 100%;
@@ -69,7 +69,7 @@
 <body>
   <div class="welcome-box">
     <div class="welcome-icon">🏠</div>
-    <h1>欢迎使用 AI标王</h1>
+    <h1>欢迎使用 授权工具</h1>
     <p>请选择左侧平台开始操作</p>
   </div>
 </body>
