修改授权同步逻辑

--- a/renderer/main.html
+++ b/renderer/main.html
@@ -810,7 +810,7 @@
 					console.log('当前页面的所有cookie:', cookiesList);
 					//去发送后端
 					console.log(currentNavId)
-					const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
+					// const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
 					const result2 = window.electronAPI.checkUserCookies({ currentNavId, cookiesList, token, sendId });
 					a.flag = true;
 					setTimeout(() => {
@@ -828,7 +828,7 @@
 					console.log('当前页面的所有cookie:', cookiesList);
 					//去发送后端
 					console.log(currentNavId)
-					const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
+					// const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
 					const result2 = window.electronAPI.checkUserCookies({ currentNavId, cookiesList, token, sendId });
 					a.flag = true;
 				});
@@ -842,7 +842,7 @@
 					console.log('当前页面的所有cookie:', cookiesList);
 					//去发送后端
 					console.log(currentNavId)
-					const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
+					// const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
 					const result2 = window.electronAPI.checkUserCookies({ currentNavId, cookiesList, token, sendId });
 					a.flag = true;
 				});
@@ -856,7 +856,7 @@
 					console.log('当前页面的所有cookie:', cookiesList);
 					//去发送后端
 					console.log(currentNavId)
-					const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
+					// const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
 					const result2 = window.electronAPI.checkUserCookies({ currentNavId, cookiesList, token, sendId });
 					a.flag = true;
 				});
@@ -870,7 +870,7 @@
 					console.log('当前页面的所有cookie:', cookiesList);
 					//去发送后端
 					console.log(currentNavId)
-					const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
+					// const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
 					const result2 = window.electronAPI.checkUserCookies({ currentNavId, cookiesList, token, sendId });
 					a.flag = true;
 				});
@@ -903,7 +903,7 @@
 						// 请求成功时处理响应数据
 						console.log('56546454453:', data.data);
 						const cookiesList = {'appid': data.data };
-						const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
+						// const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
 						return data; // 返回处理后的数据
 					})
 					.catch(error => {
@@ -926,7 +926,7 @@
 					// }, 2000);
 					//去发送后端
 					console.log(currentNavId)
-					const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
+					// const result1 = window.electronAPI.saveUserCookies({ currentNavId, cookiesList, token, sendId });
 					const result2 = window.electronAPI.checkUserCookies({ currentNavId, cookiesList, token, sendId });
 					a.flag = true;
 				});
