--- a/renderer/login.html
+++ b/renderer/login.html
@@ -20,18 +20,26 @@
       align-items: center;
       min-height: 100vh;
       color: #333;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
     }
 
     .login-container {
-      width: 320px;
+      width: 100vw;
+      height: 100vh;
       background: rgba(255, 255, 255, 0.95);
       backdrop-filter: blur(10px);
-      border-radius: 16px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
+      border-radius: 0;
+      box-shadow: none;
       overflow: hidden;
       position: relative;
       z-index: 10;
       animation: slideUp 0.6s ease-out;
+      display: flex;
+      flex-direction: column;
+      min-width: 0;
+      min-height: 0;
     }
 
     @keyframes slideUp {
@@ -48,9 +56,9 @@
 
     /* 关闭按钮样式 */
     .close-btn {
-      position: absolute;
-      top: 12px;
-      right: 12px;
+      position: fixed;
+      top: 20px;
+      right: 20px;
       width: 28px;
       height: 28px;
       background: rgba(255, 255, 255, 0.2);
@@ -100,6 +108,8 @@
       text-align: center;
       padding: 25px 20px;
       position: relative;
+      flex-shrink: 0;
+      min-height: 0;
     }
 
     .login-header h1 {
@@ -120,11 +130,18 @@
 
     .login-body {
       padding: 25px 25px 20px;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      min-height: 0;
+      overflow: hidden;
     }
 
     .input-group {
       margin-bottom: 18px;
       position: relative;
+      min-width: 0;
     }
 
     .input-group label {
@@ -144,6 +161,8 @@
       transition: all 0.3s ease;
       background: #f8f9fa;
       color: #333;
+      box-sizing: border-box;
+      min-width: 0;
     }
 
     .input-group input:focus {
@@ -231,6 +250,7 @@
       color: #888;
       border-top: 1px solid #f0f0f0;
       background: #fafbfc;
+      flex-shrink: 0;
     }
 
     .spinner {
@@ -254,20 +274,59 @@
     /* 响应式设计 */
     @media (max-width: 480px) {
       .login-container {
-        width: 90%;
-        margin: 20px;
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
       }
 
       .login-body {
-        padding: 20px 20px 15px;
+        padding: 15px 15px 10px;
+        justify-content: flex-start;
+        padding-top: 20px;
       }
 
       .login-header {
-        padding: 20px 20px;
+        padding: 15px 15px;
       }
 
       .login-header h1 {
-        font-size: 20px;
+        font-size: 18px;
+      }
+
+      .input-group {
+        margin-bottom: 15px;
+      }
+
+      .input-group input {
+        padding: 10px 12px;
+        font-size: 13px;
+      }
+
+      .login-btn {
+        padding: 10px;
+        font-size: 13px;
+      }
+    }
+
+    /* 超小屏幕适配 */
+    @media (max-width: 320px) {
+      .login-body {
+        padding: 10px 10px 5px;
+      }
+
+      .login-header {
+        padding: 10px 10px;
+      }
+
+      .input-group input {
+        padding: 8px 10px;
+        font-size: 12px;
+      }
+
+      .login-btn {
+        padding: 8px;
+        font-size: 12px;
       }
     }
 
