--- a/renderer/main.html
+++ b/renderer/main.html
@@ -562,7 +562,7 @@
 			{ id: 2, name: "搜狐", url: "https://mp.sohu.com/mpfe/v4/login", icon: "🦊", flag: false },
 			{ id: 6, name: "腾讯创作", url: "https://om.qq.com/main", icon: "🐧", flag: false },
 			{ id: 7, name: "值得买", url: "https://zhiyou.smzdm.com/user/login?redirect_to=https://post.smzdm.com/tougao/", icon: "🛒", flag: false },
-			{ id: 1, name: "百家号", url: "https://baijiahao.baidu.com/builder/theme/bjh/login", icon: "📝", flag: false },
+			{ id: 1, name: "百家号", url: "https://baijiahao.baidu.com/", icon: "📝", flag: false },
 			{ id: 4, name: "微信公众号", url: "http://zs.open.chuangmaedu.com/openPlatform/preAuthCodeHtml/open?id=", icon: "💬", flag: false },
 			{ id: 3, name: "今日头条", url: "https://mp.toutiao.com/auth/page/login", icon: "📰", flag: false },
 			{ id: 5, name: "新浪", url: "https://mp.sina.com.cn/", icon: "🕊️", flag: false },
