--- a/renderer/main.html
+++ b/renderer/main.html
@@ -761,9 +761,9 @@
 				if (currentUrl.includes('http://zs.open.chuangmaedu.com/openPlatform/callback')) {
 					checkLoginStatus(currentUrl);
 				}
-				if (currentUrl.includes('https://zhiyou.smzdm.com/user') && !currentUrl.includes('login')) {
-					checkLoginStatus(currentUrl);
-				}
+				// if (currentUrl.includes('https://zhiyou.smzdm.com/user') && !currentUrl.includes('login')) {
+				// 	checkLoginStatus(currentUrl);
+				// }
 				if (currentUrl.includes('https://post.smzdm.com/tougao') && !currentUrl.includes('login')) {
 					checkLoginStatus(currentUrl);
 				}
