网易更新授权

--- a/renderer/main.html
+++ b/renderer/main.html
@@ -1108,6 +1108,8 @@
 				domain = 'https://om.qq.com';
 			} else if (currentUrl.includes('post.smzdm.com')) {
 				domain = 'https://post.smzdm.com';
+			} else if (currentUrl.includes('mp.163.com')) {
+				domain = 'https://mp.163.com';
 			} else {
 				hideLoading();
 				showSuccessMessage('当前页面不支持更新授权');
